# mini-kernel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
arch/: CMakeLists.txt
arch/arm64/: CMakeLists.txt
arch/arm64/arch/: CMakeLists.txt  exception.h  sys.h  types.h
arch/arm64/arch/core/: CMakeLists.txt  endian.s  mem.S  memcpy.S  types.h
arch/arm64/arch/sys/: CMakeLists.txt  exception.c  exception.s  frame.s  gic.c  gic.h  mmu.c  mmu.h  reg.h  reg.s  sys.h
arch/arm64/armv8a/: CMakeLists.txt  exception.c  exception.s  macros.s
arch/arm64/asm/: endian.s
arch/arm64/platform/qemu-virt/: CMakeLists.txt  boot.c  boot.s  linker.ld
boot/: CMakeLists.txt  boot.c  linker.ld
boot/qemu-arm64-virt/: CMakeLists.txt  boot.s
core/: CMakeLists.txt  endian.c  endian.h  mem.c  mem.h  str.c  str.h  strings.c  strings.h  types.h
core/util/: bits.h
drivers/: CMakeLists.txt  uart-pl011.c  uart-pl011.h  uart.c
drivers/arm/: gic-v2.c  gic-v2.h  uart-pl011.c  uart-pl011.h
drivers/inc/: uart.h
lib/: CMakeLists.txt
lib/devicetree/: CMakeLists.txt  dt.c  dt.h  fdt.c  fdt.h  init.h
lib/devicetree/init/: uart-pl011.c
lib/dsa/: CMakeLists.txt  list.c  list.h  ring.c  ring.h
mem/: CMakeLists.txt  buddy.c  bump.c  heap.c  heap_internal.h  mem.h
sys/: CMakeLists.txt  exception.c  mmu.h  sys.h
